with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 9.4

** Improved constructor & destructor declaration support
Inline file-scope and defaulted & deleted in-class constructors & destructors
are now supported; `final` & `override` are now supported for destructors.

** Fixed showing as `using`
Fixed showing of types having qualified pointers as `using` declarations.

** More predefined types
Added `constraint_handler_t` and `lconv`.


* Changes in Cdecl 9.3

** Bit-fields
Declarations with bit-field widths are now supported:

    cdecl> explain unsigned x : 3
    declare x as unsigned int width 3 bits

** Digraph warning
A warning is given if the digraph option is set and the current language is C89
or earlier.


* Changes in Cdecl 9.2

** In-class constructor declarations
In-class constructor declarations without any storage-class-like type are now
supported:

    c++decl> explain C(int)
    declare C as constructor (int)

** Context-senstive `final` & `override`
Both `final` and `override` are now recognized as keywords only in a member
function declaration context:

    c++decl> explain int final
    declare final as int
    c++decl> explain void f() final
    declare f as final virtual member function returning void


* Changes in Cdecl 9.1

** K&R C typedefs
K&R C now has a set of predefined `typedef` declarations distinct from C89 that
include only those shown in the first edition of _The C Programming Language_.

** K&R C `main()` arguments
The arguments of main() are no longer checked for type in K&R C.

** `main()` third argument
A third argument of either:

    char *envp[]
    char **envp

(or `const` versions) for `main()` is now supported.

** K&R C functions
Implicit `int` functions in K&R C are now supported:

    cdecl> set knrc
    cdecl> explain f(x)
    declare f as function (x) returning int
