@@ -1,0 +1,1 @@
+define S as structure S
