@@ -1,0 +1,1 @@
+cdecl @ @ @ explain struct S @ 0
