@@ -16,6 +16,12 @@ with their complete changes, see the AUTHORS file.
 Inline file-scope and defaulted & deleted in-class constructors & destructors
 are now supported; `final` & `override` are now supported for destructors.
 
+** Explaining forward declarations
+Forward `enum`, `class`, `struct`, and `union` declarations are now supported:
+
+    cdecl> explain struct S
+    define S as struct S
+
 ** Fixed showing as `using`
 Fixed showing of types having qualified pointers as `using` declarations.
 
